# cel-evaluator-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  asset-manifest.json  build.rs  build.sh  build_android.sh  build_ios.sh  build_wasm.sh  config.toml  index.html  package.json  uniffi-bindgen.rs  uniffi.toml
.github/workflows/: trigger-supercel-android.yml  trigger-supercel-ios.yml
src/: ast.md  ast.rs  cel.udl  lib.rs  models.md  models.rs
src/uniffi/cel/: cel.kt
static/css/: main.e6c13ad2.css.map
static/js/: main.65b34748.js  main.65b34748.js.map
wasm/: Cargo.toml  README.md  index.js  package-lock.json  package.json  webpack.browser.js
wasm/example/: test_node.js
wasm/example/browser/: README.md  config-overrides.js  package-lock.json  package.json
wasm/example/browser/src/: App.js  CELParser.jsx  index.js
wasm/src/: lib.rs
