[package]
name = "cel-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlž
[lib]
name = "cel_eval"
crate-type = ["staticlib","cdylib"]

[dependencies]
cel-interpreter = "0.8.1"
uniffi = { version = "0.28" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }

[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip=true

