[package]
name = "cel-eval"
version = "0.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlž
[lib]
name = "cel_eval"
crate-type = ["staticlib","cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
cel-interpreter = "0.8.1"
cel-parser = "0.7.1"
uniffi = { version = "0.28" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0" }
async-trait = "0.1.81"
wasm-bindgen-futures = "0.4.43"
futures-lite = "2.3.0"


[dev-dependencies]
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip=true

[workspace]
members = ["wasm"]
